@@ -32,6 +32,5 @@
 #define OVS_OS_NAME    "@OVS_OS_NAME@"
 #define OVS_OS_VERSION "@OVS_OS_VERSION@"
 
-#define PROGNAME        "OpenVAS"
 #define OPENVAS_VERSION  "@OPENVASSD_MAJOR@.@OPENVASSD_MINOR@.@OPENVASSD_PATCH@"
 #define OPENVAS_FULL_VERSION  "@OPENVASSD_MAJOR@.@OPENVASSD_MINOR@.@OPENVASSD_PATCH@.@OPENVASSD_RC@"
